--- a/adminPanel/package.json
+++ b/adminPanel/package.json
@@ -13,13 +13,16 @@
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "axios": "^1.9.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.510.0",
     "next": "14.1.0",
+    "package.json": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7"
   },
