--- a/adminPanel/package.json
+++ b/adminPanel/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.29.7",
+    "@clerk/nextjs": "^4.31.8",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.0.2",
@@ -18,7 +18,7 @@
     "clsx": "^2.1.0",
     "ioredis": "^5.6.1",
     "lucide-react": "^0.510.0",
-    "next": "14.1.0",
+    "next": "^15.3.2",
     "package.json": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
